--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.8.0",
     "ai": "^5.0.10",
     "autoprefixer": "^10.4.21",
     "firebase": "^12.1.0",
