--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ai": "^5.0.10",
     "autoprefixer": "^10.4.21",
     "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
     "next": "15.4.6",
     "openai": "^5.12.2",
     "postcss": "^8.5.6",
