--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
+    "resend": "^6.0.2",
     "stripe": "^18.4.0"
   },
   "devDependencies": {
