--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/app": "^0.14.2",
+    "@firebase/auth": "^1.11.0",
+    "@firebase/firestore": "^4.9.1",
     "@stripe/stripe-js": "^7.8.0",
     "ai": "^5.0.10",
     "autoprefixer": "^10.4.21",
-    "firebase": "^12.1.0",
+    "firebase": "^12.2.1",
     "firebase-admin": "^13.4.0",
     "next": "15.4.6",
     "openai": "^5.12.2",
